infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inrent
  labels:
    app.kubernetes.io/component: config
    pod-security.kubernetes.io/enforce: restricted
